--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.android.support:design:23.4.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.firebase:firebase-core:9.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
