--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.android.support:design:24.0.0-beta1'
     compile 'com.android.support:support-v4:24.0.0-beta1'
+    compile 'com.google.firebase:firebase-crash:9.6.1'
     testCompile 'junit:junit:4.12'
 }
 
