--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,16 @@ android {
     }
 }
 
+repositories {
+        maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:cardview-v7:24.0.+'
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
@@ -31,6 +36,7 @@ dependencies {
     compile 'com.android.support:design:24.0.0-beta1'
     compile 'com.android.support:support-v4:24.0.0-beta1'
     compile 'com.google.firebase:firebase-crash:9.6.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.2'
     testCompile 'junit:junit:4.12'
 }
 
